# stt-keyboard-windows

./: .gitignore  CLAUDE.md  LICENSE  PRODUCT.md  README.md  TROUBLESHOOTING.md  launcher.py  pyproject.toml  stt-keyboard.spec
.github/workflows/: ci.yml  release.yml
mickey/: __init__.py  app.py  config.py  hotkey.py  indicator.py  logging_config.py  permissions.py  recorder.py  sounds.py  transcriber.py  tray.py  typer.py
scripts/: build.bat  run.bat
tests/: conftest.py  test_config.py  test_hotkey.py  test_integration.py  test_sounds.py  test_transcriber.py  test_typer.py
