[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stt-keyboard"
version = "0.1.0"
description = "System tray app for local speech-to-text transcription using Whisper (Windows)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pynput>=1.7.6",
    "sounddevice>=0.5.0",
    "numpy>=1.24.0",
    "faster-whisper>=1.0.0",
    "scipy>=1.11.0",
    "PyQt6>=6.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[project.scripts]
stt-keyboard = "mickey.app:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["mickey"]
branch = true
omit = [
    "mickey/app.py",  # Entry point
    "mickey/indicator.py",  # UI component, hard to test
    "mickey/tray.py",  # UI component, requires PyQt6 mocking
    "mickey/permissions.py",  # OS system calls
    "mickey/recorder.py",  # Audio hardware interaction
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
fail_under = 80
show_missing = true

[tool.coverage.html]
directory = "htmlcov"
